# python-project-lvl3

./: .coverage  .travis.yml  Makefile  README.md  pyproject.toml
docs/: Index.html  Index.md  Terry.mhtml  Web-site.html  index.html  index.md
page_loader/: __init__.py  cli.py  created.py  engine.py  filter.py  getter.py  logger.py  prepare.py
page_loader/script/: pageloader.py
tests/: test_exceptions.py  test_http.py  test_loader_works.py  test_page_loader.py
tests/fixtures/: greygreywolf-github-io-python-project-lvl3-.html  hexlet-io-courses.html
tests/fixtures/hexlet-io-courses_files/: 0-3955e5b12bc1d7eef44b.js  1-e9b7b67efea97b06cd15.js  1901967613399172  2-495826567c2405fd2cdf.js  41-542cbb4a.css  41-fd87935a08fbbe439f6d.js  a_002.js  application-1de07abdcdf11483cb67720cb985f4a94f150c599eaf9b06.css  application-8148be7d0d3e1117f5d7.js  application-a98bdd3e8e9c003cf0655b2197f00166c7a0d40da9c84b4a0.js  courses.html  gtm.js  js.js  js_002.js  notifications-be37f781b814c35b05ce.js  runtimeapplication-2236df4720d857b257d4.js  runtimenotifications-31b99f35b1fa5f3c0559.js  wootric-sdk.js
