[tool.poetry]
name = "GreyWolf_Page_Loader"
version = "0.1.0"
description = "Page Loader"
authors = ["GreyGreyWolf"]
packages = [
  { include = "page_loader" },
  ]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
coverage = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
