[tool.poetry]
name = "GreyWolf_Page_Loader"
version = "0.1.4"
description = "Page Loader"
authors = ["GreyGreyWolf"]
packages = [
  { include = "page_loader" },
  ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
coverage = "^5.0.4"
requests = "^2.22.0"
pathlib = "^1.0.1"
bs4 = "^0.0.1"

[tool.poetry.scripts]
pageloader = 'page_loader.script.pageloader:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
